# ComfyUI-VideoMaMa

./: .gitignore  README.md  __init__.py  nodes.py  pipeline_svd_mask.py  pyproject.toml  requirements.txt
examples/: VideoMaMa_simple_example.json
utils/: __init__.py  download.py  sam2_setup.py
web/js/: point_selector.js
