[project]
name = "ComfyUI-VideoMaMa"
description = "ComfyUI custom node implementation of VideoMaMa for video matting with mask conditioning."
version = "1.0.2"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = [
    "diffusers>=0.24.0",
    "transformers>=4.30.0",
    "accelerate>=0.20.0",
    "huggingface_hub>=0.19.0",
    "safetensors>=0.3.0",
    "einops>=0.6.0",
]

[project.urls]
Repository = "https://github.com/okdalto/ComfyUI-VideoMaMa"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/okdalto/ComfyUI-VideoMaMa/wiki"
"Bug Tracker" = "https://github.com/okdalto/ComfyUI-VideoMaMa/issues"

[tool.comfy]
PublisherId = "seonghyeon"
DisplayName = "ComfyUI-VideoMaMa"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

